hphp/hack/test/typecheck/is_expression/any.php.exp
File "any.php", line 6, characters 26-27:
Was expecting a type hint (Typing[4032])
